tests/ui/consts/issue-102117.stderr
error[E0277]: can't drop `T` in const contexts
  --> $DIR/issue-102117.rs:21:88
   |
LL |                     transmute::<unsafe fn(*mut T), unsafe fn(*mut ())>(drop_in_place::<T>)
   |                                                                                        ^ the trait `~const Destruct` is not implemented for `T`
   |
note: the trait `Destruct` is implemented for `T`, but that implementation is not `const`
  --> $DIR/issue-102117.rs:21:88
   |
LL |                     transmute::<unsafe fn(*mut T), unsafe fn(*mut ())>(drop_in_place::<T>)
   |                                                                                        ^
note: required by a bound in `std::ptr::drop_in_place`
  --> $SRC_DIR/core/src/ptr/mod.rs:LL:COL
help: consider restricting type parameter `T`
   |
LL |     pub fn new<T: ~const std::marker::Destruct>() -> &'static Self {
   |                 ++++++++++++++++++++++++++++++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
